Bug 456627 - Reported tab name contains non-substituted %n in it
Summary: Reported tab name contains non-substituted %n in it
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: kpart (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 456912 457201 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-07-12 15:11 UTC by ratijas
Modified: 2022-07-28 10:31 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Konsole - %n (40.36 KB, image/png)
2022-07-12 15:11 UTC, ratijas
Details
Konsole - profile tabs section (55.29 KB, image/png)
2022-07-12 15:12 UTC, ratijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2022-07-12 15:11:27 UTC
Created attachment 150558 [details]
Konsole - %n

SUMMARY

Lately Konsole and Yakuake shows «~ : %n» instead of a process name (e.g. zsh), even though sometimes it still shows an actual name, like «drkonqi : perl» when rebuilding packages.

STEPS TO REPRODUCE
1. Launch Konsole with a pretty much default profile.
2. Open new tabs.

OBSERVED RESULT
Tabs are showing up with a «~ : %n» text on them.

EXPECTED RESULT
Placeholders should be substituted.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE: git master
Qt Version: 5.15.5
Kernel Version: 5.18.10-arch1-1 (64-bit)
Graphics Platform: X11
Comment 1 ratijas 2022-07-12 15:12:08 UTC
Created attachment 150559 [details]
Konsole - profile tabs section

And this is a screenshot of my profile's Tabs settings page.
Comment 2 Bug Janitor Service 2022-07-14 21:24:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/710
Comment 3 Kurt Hindenburg 2022-07-18 14:57:13 UTC
Git commit ebbf871491d6bf72475b72929f55f316317a55a7 by Kurt Hindenburg, on behalf of Luis Javier Merino Morán.
Committed on 18/07/2022 at 14:47.
Pushed by hindenburg into branch 'master'.

Fix tab title substitution regression

Commit e936c6cb introduced a bug in tab title substitution, which
potentially prevented further substitutions from working.

M  +14   -12   src/session/Session.cpp

https://invent.kde.org/utilities/konsole/commit/ebbf871491d6bf72475b72929f55f316317a55a7
Comment 4 Kurt Hindenburg 2022-07-19 12:49:13 UTC
*** Bug 456912 has been marked as a duplicate of this bug. ***
Comment 5 Ahmad Samir 2022-07-27 14:45:32 UTC
*** Bug 457201 has been marked as a duplicate of this bug. ***
Comment 6 Antonio Rojas 2022-07-28 06:16:12 UTC
AFAICS this fix hasn't been backported to the 22.08 branch. The bug will make it to the final release if it's not.
Comment 7 Ahmad Samir 2022-07-28 10:31:07 UTC
(In reply to Antonio Rojas from comment #6)
> AFAICS this fix hasn't been backported to the 22.08 branch. The bug will
> make it to the final release if it's not.

The commit was reverted in release/22.08, https://invent.kde.org/utilities/konsole/-/commit/80f33b011f3cb2e0bcc76b01cb5de163e56ae2f5