Fix tab title substitution regression

Commit e936c6cb introduced a bug in tab title substitution, which
potentially prevented further substitutions from working.

BUG: 456627